--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ papers:
     paper-type: inproceedings
     selected: yes
     img: paper2
-    title: Geno: A Developer Tool for Authoring Multimodal Interaction on Existing Web Applications</a>
+    title: Geno - A Developer Tool for Authoring Multimodal Interaction on Existing Web Applications</a>
     authors: Ritam Sarmah, Yunpeng Ding, Di Wang, Cheuk Yin Phipson Lee, Toby Jia-Jun Li, Xiang ‘Anthony’ Chen
     booktitle: ACM UIST 2020
     booktitle-url: https://uist.acm.org/uist2020/
