--- a/_config.yml
+++ b/_config.yml
@@ -32,17 +32,17 @@ papers:
     #   ranking approach to explain the sematic meaning of the clus- tering results. 
     #   The performance of the proposed approach is verified on a dataset from a telecom 
     #   operator, which explains users’ interests well in the clusters.
-  - layout: paper
-    year: 2018
-    paper-type: inproceedings
-    selected: yes
-    img: paper2
-    title: Geno - A Developer Tool for Authoring Multimodal Interaction on Existing Web Applications</a>
-    authors: Ritam Sarmah, Yunpeng Ding, Di Wang, Cheuk Yin Phipson Lee, Toby Jia-Jun Li, Xiang ‘Anthony’ Chen
-    booktitle: ACM UIST 2020
-    booktitle-url: https://uist.acm.org/uist2020/
-    venue: conference
-    note: In Proceeding
+  # - layout: paper
+  #   year: 2020
+  #   paper-type: inproceedings
+  #   selected: yes
+  #   img: paper2
+  #   title: Geno - A Developer Tool for Authoring Multimodal Interaction on Existing Web Applications</a>
+  #   authors: Ritam Sarmah, Yunpeng Ding, Di Wang, Cheuk Yin Phipson Lee, Toby Jia-Jun Li, Xiang ‘Anthony’ Chen
+  #   booktitle: ACM UIST 2020
+  #   booktitle-url: https://uist.acm.org/uist2020/
+  #   venue: conference
+  #   note: In Proceeding
       
     
 
