--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ papers:
     booktitle: ACM UIST 2020
     booktitle-url: https://uist.acm.org/uist2020/
     venue: conference
-    note: In Proceeding
+    note: In Proceedings
       
     
 
